--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ html, body {
 
 
 .content-container {
-  height: calc(100vh - 200px); /* Full page height */
+  height: calc(100vh); /* Full page height */
   overflow-y: scroll; /* Ensure vertical scrolling */
   -webkit-overflow-scrolling: touch; /* Enable smooth scrolling on mobile devices */
 
@@ -66,3 +66,11 @@ html, body {
 .content-container::-webkit-scrollbar {
   display: none; /* For Chrome, Safari, and Edge */
 }
+
+.gradient-border {
+  border: 1px solid; 
+  border-image-source: linear-gradient(78.86deg, #82BC34 6.42%, #CEDD45 96.24%);
+  border-image-slice: 1;
+  border-radius: 25px; 
+}
+
