--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ html, body {
 }
 
 
-.tag {
+/* .tag {
   border-radius: 0 0 10px 0;
 }
 
@@ -124,4 +124,4 @@ html, body {
   left: 4px;
   border-top-left-radius: 6px;
   box-shadow: -2px -2px #82BC34;
-}
+} */
